Fixed overflow on search form

--- a/css/style.css
+++ b/css/style.css
@@ -134,8 +134,8 @@ header nav ul li:hover {
 
 /****** Search bar ******/
 form.search-bar {
-  display: grid;
-  grid-template-columns: 50px 165px 135px;
+  display: flex;
+  
   border-radius: 13px;
   width: fit-content;
   border: 1px solid var(--main-bg-color);
@@ -145,7 +145,6 @@ form.search-bar {
 @media (max-width: 767px) {
   form.search-bar {
     width: 100%;
-    grid-template-columns: 50px 1fr 45px;
   }
 }
 
@@ -154,6 +153,7 @@ form.search-bar .location {
   border-top-left-radius: inherit;
   border-bottom-left-radius: inherit;
   border: 1px solid transparent;
+  padding: 10px 15px;
 }
 
 form.search-bar .location i {
@@ -168,6 +168,8 @@ form.search-bar input[type="text"] {
   text-align: center;
   height: 40px;
   border: none;
+  flex-grow: 1;
+  min-width : 0;
 }
 
 /* Mobile */
@@ -188,6 +190,7 @@ form.search-bar button[type="submit"] {
   border-top-right-radius: inherit;
   border-bottom-right-radius: inherit;
   cursor: pointer;
+  min-width : 0;
 }
 
 /* Mobile */
@@ -197,6 +200,8 @@ form.search-bar button[type="submit"] {
     border-radius: 13px;
     padding: 0 13px;
     box-shadow: #9c9595 0 2px 1px 0;
+	  flex-shrink: 0;
+    
   }
 
   form.search-bar button[type="submit"]:before {
